--- a/front-end/src/app/components/about/about.component.html
+++ b/front-end/src/app/components/about/about.component.html
@@ -6,11 +6,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <section class="about" id="about">
+  <div>
   <h2 class="titleText" style="text-align:center"><span>A</span> propos de nous</h2>
-
+</div>
   <div class="row1">
     <div class="col50">
-      <br/><br/><br/><br/>
+      <br/><br/><br/>
       <p>Justcrok Halal et un site pour des particuliers et professionnels. Parmi les principales rubriques que vous trouverez sur ce site, des bibliographies, des sites<br/>
          essentiels à mettre en favoris, des informations nutritionnelles, des dossiers sur la Boucherie, charcuterie Halal, cuisine, food-truck, fast-food, boulangerie, <br/>
          pâtisserie et tous les secteurs alimentaires professionnels qui regroupent les certificateurs européens HALAL. Pour les particuliers, vous allez pouvoir <br/> rechercher des commerces près de chez vous (annuaire) dans le domaine alimentaire, notamment des informations et des recettes Techniques ou faciles <br/>
@@ -27,8 +28,9 @@
     </div>
     <div class="col50">
       <div class="imgBx">
-        <br/><br/><br/>
+        <br/><br/>
         <div class="col-lg-12" style="text-align:center"> Voici Nos platforms</div>
+        <br/><br/>
 
         <div class="container" id="tourpackages-carousel">
           <div class="row">
