--- a/front-end/src/app/components/homepage/homepage.component.html
+++ b/front-end/src/app/components/homepage/homepage.component.html
@@ -9,10 +9,11 @@
 <section class="banner" id="banner" >
   <br/>
   <div class="content">
-    <br/><br/><br/><br/>
+    <br/><br/><br/><br/><br/><br/>
     <h2>Bienvenue dans notre communauté Food HALAL</h2>
     <h4>Particuliers, Professionnelle, tous les info sur le HALAL, des recettes HALAL, aux normes HACCP, des cours en lignes...</h4>
-     <h4><a class="btn" href="#">Notre Recettes</a></h4>
+    <br/>
+    <h4><a class="btn" >Notre Recettes</a></h4>
      <br/>
      <app-cards ></app-cards>
 
@@ -23,3 +24,5 @@
 <app-about></app-about>
 <app-toprecette></app-toprecette>
 <app-membres></app-membres>
+<app-footer></app-footer>
+
