--- a/front-end/src/app/components/membres/membres.component.html
+++ b/front-end/src/app/components/membres/membres.component.html
@@ -5,9 +5,10 @@
 <section class="expert" id="expert" >
   <div class="content" >
     <div class='title'>
-    <h2 class="titleText">Membres <span>A</span>ctif  </h2>
-  </div>
+      <h2 class="titleText"> <span>A</span>vis Membres  </h2>
+    </div>
   <section id="team" class="pb-5">
+
     <div class="container">
         <div class="row">
             <!-- Team member -->
@@ -302,6 +303,9 @@
         </div>
     </div>
 </section>
+<div class="title">
+  <a href="#" class="btn">tous les Avis </a>
+</div>
 <!-- Team -->
     </div>
 </section>
