--- a/front-end/src/app/components/about/about.component.css
+++ b/front-end/src/app/components/about/about.component.css
@@ -3,7 +3,7 @@
   color: #283d50;
   text-align: center;
   font-weight: 300;
-
+ margin-top:20px;
   position: relative
 }
 
@@ -37,13 +37,16 @@
   text-align:left;
 }
 .titleText span{
-  color:#ff0157;
+  color:#a6ff4d;
   font-weight:700;
   font-size:1.5em;
   text-align:left;
 
 }
-
+#about {
+  background: #eee !important;
+   margin:100px 100px 100px  100px;
+}
 
 #clients .client-logo {
   padding: 64px;
@@ -70,7 +73,7 @@
   transition: all 0.4s ease-in-out
 }
 #about{
-  padding:100px;
+  padding:30px;
 }
 .row1{
   position:relative;
@@ -292,4 +295,13 @@ p
 .btn-update
 {
   margin-left:15px;
+}
+@media (max-width:991px){
+  .row1{
+    flex-direction:column;
+  }
+  .row1 .col50{
+    position: relative;
+    width:100%
+  }
 }
