--- a/front-end/src/app/components/homepage/homepage.component.css
+++ b/front-end/src/app/components/homepage/homepage.component.css
@@ -38,7 +38,7 @@ h4{
 .btn{
   font-size:1em;
   color:#fff;
-  background:#ff0157;
+  background:#a6ff4d;
   display: inline-block;
   padding:10px 30px;
   margin-top:20px;
@@ -50,4 +50,15 @@ h4{
 .btn:hover
 {
 Letter-spacing:6px;
+}
+@media (max-width:991px){
+  section {
+    padding:20px;
+
+  }
+  .banner .content h2{
+    font-size:3em;
+    color:#fff;
+  }
+
 }
