--- a/front-end/src/app/components/navbar/navbar.component.css
+++ b/front-end/src/app/components/navbar/navbar.component.css
@@ -45,5 +45,57 @@ header .navigation li a {
  color:#111;
 }
 header .navigation li a:hover {
-  color:#ff0157
+  color:#a6ff4d;
+}
+
+
+@media (max-width:991px){
+  header,
+  header .sticky {
+    padding:10px 20px ;
+  }
+  header .navigation {
+    display:none;
+  }
+  .menuToggle {
+    position:relative ;
+    width: 40px;
+    height:40px;
+
+    background:url('https://res.cloudinary.com/dtl8igxn0/image/upload/v1615393880/588a6507d06f6719692a2d15_fwiea4.png');
+     background-size:30px;
+     background-repeat: no-repeat;
+     background-position: center;
+     cursor:pointer;
+  }
+  .menuToggle.active {
+  background:url('https://res.cloudinary.com/dtl8igxn0/image/upload/v1615408515/242-2425648_close-remove-delete-exit-cross-cancel-trash-comments_ibxpfx.jpg');
+  background-size:25px;
+  background-repeat:no-repeat;
+  background-position: center;
+}
+header.sticky.menuToggle {
+  filter:invert(1)
+
+}
+header .navigation.active{
+  width:100%;
+  height:calc(100% - 68px);
+  position: fixed;
+  top:68px;
+  left: 0;
+  display:flex;
+  justify-content:center;
+  align-items: center;
+  flex-direction: column;
+  background:#fff;
+}
+header .navigation li {
+  margin-left:0;
+
+}
+header .navigation li a {
+  color:#111 ;
+  font-size:1.6em;
+}
 }
