--- a/front-end/src/app/components/navbar/navbar.component.html
+++ b/front-end/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,16 @@
+
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
 <header>
   <a  class="logo"><img src="https://res.cloudinary.com/dtl8igxn0/image/upload/v1614961378/cropped-logo-justcrok-500x500-1_tm9dn7.png" /></a>
-   <ul class="navigation">
-     <li><a >Accueil</a></li>
-     <li><a>Recetttes</a></li>
+  <div class="menuToggle" onclick="toggleMenu()"></div>
+  <ul class="navigation">
+     <li><a routerLink='/home' >Accueil</a></li>
+     <li><a>Recette</a></li>
     <li><a>Cours Gratuit </a></li>
-    <li><a>Nous contactez  </a></li>
+    <li ><a routerLink='/contact'>Nous contacter  </a></li>
 
 
    </ul>
