--- a/front-end/src/app/components/toprecette/toprecette.component.html
+++ b/front-end/src/app/components/toprecette/toprecette.component.html
@@ -1,8 +1,12 @@
-<section  class="menu" id="menu" >
+<section class="expert" id="expert" >
+
+<div class="content1" >
   <div class="title">
     <h2 class="titleText">Top <span>R</span>ecettes</h2>
 
   </div>
+<section  class="menu" id="menu" >
+
   <div class="content">
     <div class="box">
       <div class="imgBx">
@@ -59,7 +63,10 @@
       </div>
     </div>
   </div>
-  <div class="title">
-    <a href="#" class="btn">tous les recettes </a>
-  </div>
+
+</section>
+<div class="title">
+  <a href="#" class="btn">tous les recettes </a>
+</div>
+</div>
 </section>
